@startuml

title __SOURCE's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        class AnnaClass {
            - lines : List<String>
            + AnnaClass()
            + getLines()
            + getPaths()
            + apply()
            + getAnnaClasses()
            + clone()
            + getPath()
            + getAnnaClass()
            + getClassName()
            + getJoinedLines()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        class AnnaPackage {
            - sources : Map<AnnaPath, Source>
            + AnnaPackage()
            + getPaths()
            + apply()
            + getAnnaClasses()
            + clone()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        class AnnaPath {
            - packages : List<String>
            - className : String
            + AnnaPath()
            + AnnaPath()
            + toPath()
            + toString()
            + equals()
            + hashCode()
            {static} + getBuilder()
            + getCanonicalName()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        class AnnaPathBuilder {
            - packages : List<String>
            - className : String
            - AnnaPathBuilder()
            + addPackage()
            + setClassName()
            + build()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        interface Source {
            {abstract} + getPaths()
            {abstract} + apply()
            {abstract} + getAnnaClasses()
            {abstract} + clone()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.source {
        class SourceFactory {
            - path : Path
            + SourceFactory()
            + getSourceFromAnnaPath()
            + getSourceFromAnnaPaths()
        }
      }
    }
  }
  

  AnnaClass -up-|> Source
  AnnaClass o-- AnnaPath : className
  AnnaPackage -up-|> Source
  AnnaPath +-down- AnnaPathBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
